--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -16,6 +16,6 @@
         <h1>Bryce Hansen</h1>
         <img src="IMG_1610.jpg" alt="Headshot self portrait" width="350">
         <p>Obseesions - Body Builder, Gamer, Learning</p>
-        <p>Always trying to better myself and those around me - Philosophy I think about 'When making a decision is ethics or survival more important'</p>
+        <p>Always trying to better myself and those around me - Philosophy I think about 'When making a decision is ethics or survival more important .... Changing this for assignment.'</p>
     </body>
 </html>
