--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,9 +4,9 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" >
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" >
 </head>
 
 <body>
@@ -14,34 +14,28 @@
     <h1>Rafting Exploration Site Plan</h1>
     <h2>Bryce Hansen</h2>
     <h2>WDD 130</h2>
-    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
-    <hr />
+    <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>To show off how rafting can help you explore your interests and nature!</p>
-    <!-- change this -->
 
     <h3>Audience</h3>
     <p>The people I am looking to reach is people who are either too scared to raft, 
     maybe never rafted before, even people who don't like to raft to show how great rafting can be.
     </p>
-    <!-- change this -->
 
-    <hr />
+    <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
-    <hr />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image">
+    <hr>
     <h2>Style Guide</h2>
 
-    <!-- ------------------------Steps 6-9------------------------------ -->
 
     <h3>Color Palette</h3>
-    <!--  The colors you choose for a website are one of the most important decisions you will make. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
     
     <table class="colors">
       <tr>
@@ -59,18 +53,15 @@
       </tr>
     </table>
 
-    <!-- ------------------------Steps 10-12------------------------------ -->
 
     <h3>Typography</h3>
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
       Heading Font: Roboto
-      <!-- change this -->
     </h4>
     <h4>
       Paragraph Font: Roboto, Helvetica, sans-serif
-      <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
@@ -87,16 +78,14 @@
       happen for you.
     </p>
 
-    <!-- ------------------------Step 13------------------------------ -->
 
     <h3>Navigation with Hover</h3>
-    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
-    <hr />
+    <hr>
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
@@ -110,13 +99,13 @@
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
-    <hr />
+    <hr>
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
     <h3>[Page 2]</h3>
 
