--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,16 +7,27 @@
         <link href="styles/styles.css" rel="stylesheet">
     </head>
     <body>
+      <div id="content">
+        <header>
         <nav>
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
+            <a class"nav_link" href="wwr/index.html">WWR Website</a>
+            <a class"nav_link" href="wwr/site-plan-rafting.html">WWR Siteplan</a>
+            <a class"nav_link" href="positioning.html">Positioning Activity</a>
+            <a class"nav_link" href="#">Personal Website</a>
+            <a class"nav_link" href="#">Personal Siteplan</a>
         </nav>
-        <h1>Bryce Hansen</h1>
-        <img src="IMG_1610.jpg" alt="Headshot self portrait" width="350">
-        <p>Obseesions - Body Builder, Gamer, Learning</p>
-        <p>Always trying to better myself and those around me - Philosophy I think about 'When making a decision is ethics or survival more important .... Changing this for assignment.'</p>
+        <header>
+        <main>
+            <h1>Bryce Hansen</h1>
+            <img src="IMG_1610.jpg" alt="Headshot self portrait">
+            <p>Obsessions - Body Builder, Gamer, Learning</p>
+            <p>Always trying to better myself and those around me - Philosophy I think about 'When making a decision is ethics or survival more important .... Changing this for assignment.'</p>
+        <main>
+        <footer>
+            <p>Copyright 2024 - Bryce hansen - 
+                <a href="http://www.youtube.com/" target="_blank">Favorite Site</a>
+            </p>
+        </footer>
+        </div>
     </body>
 </html>
