--- a/personal/site-plan.html
+++ b/personal/site-plan.html
@@ -71,8 +71,8 @@
         Normal paragraph example
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+        Something
+       </p>
       <h3>
         Colored paragraph example
       </h3>
@@ -125,29 +125,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written \opy for the home page here]
+        Welcome to the Atlas Industries, your premier destination for all things firearms and accessories. Whether you're a seasoned shooter or a first-time buyer, our website is designed to cater to your needs. From pistols to rifles, ammunition to accessories, we've got you covered. Our mission is to provide a seamless online shopping experience, backed by expert advice and top-notch customer service. So, why wait? Explore our website today and discover the world of Atlas Industries.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Atlas.jpg" alt="image for homepage">
+        <img src="images/liminalbuilding.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Shop</h3>
       <p>
-        [Written copy for the Page 2 here]
+        At Atlas Industries, we offer a comprehensive selection of firearms, ammunition, and accessories. Our online store is designed to make it easy for you to find exactly what you're looking for. Browse our categories to explore our range of products, including pistols, rifles, shotguns, ammunition, optics, and more. With detailed product descriptions and high-quality images, you can make informed decisions about your purchases.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/AR-15.jpg" alt="image for page">
+        <img src="images/GLock.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Learn</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Welcome to the Atlas Industries Learning Center, your go-to resource for all things firearms and shooting. Whether you're a beginner looking to learn the basics or an experienced shooter seeking advanced techniques, our website is designed to provide you with the knowledge and skills you need. From safety tips to shooting drills, we've got you covered. Our Firearms Basics section covers everything from firearm safety to proper handling and storage, ensuring that you understand the essentials of responsible gun ownership. Additionally, our team of experts is here to provide personalized assistance, whether you have questions about a specific product or need advice on which firearm is right for you. Contact our customer support team via phone, email, or live chat, and we'll be happy to help. So, why wait? Start learning and shopping today with Atlas Industries.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/shootingrange.jpg" alt="image for page3">
+        <img src="images/gunparts.jpg" alt="image for page3">
 
       </ul>
       <hr>
