i hate this class

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -27,31 +27,39 @@
             </div>
         </section>
     </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-    </main>
-    <section id="background"></section>
-    <section class="msg">
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; 
-            it's way more than just the rapids. It's a great way to get away from it all 
-            and relax amongst all the beauty of the great outdoors. </p>
-        <a class='join' href="rivers.html" target="_blank">Join Us</a>
-    </section>
+ <main class="river">
+    <div class="content main-content">
+        <div class="item">
+            <div class="Salmon">
+                <img src="images/SalmonRiver.jpg" alt="Image 1">
+            </div>
+            <div class="Salmontext">
+                <h2>Title 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            </div>
+        </div>
+        <div class="item flip">
+            <div class="Snake">
+                <img src="images/Snakeriver.jpg" alt="Image 2">
+            </div>
+            <div class="Snaketext">
+                <h2>Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="Miss">
+                <img src="images/MissRiver.jpg" alt="Image 3">
+            </div>
+            <div class="Misstext">
+                <h2>Title 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            </div>
+        </div>
+    </div>
+</main>
+   
+    
     <footer>
         <p>Dry Oar &copy; 2024 - Bryce Hansen</p>
         <p><a href="site-plan-rafting.html" target="_blank">Site Plan</a></p>
