thank god for colorado

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -30,30 +30,30 @@
  <main class="river">
     <div class="content main-content">
         <div class="item">
-            <div class="Salmon">
+            <div class="image">
                 <img src="images/SalmonRiver.jpg" alt="Image 1">
             </div>
-            <div class="Salmontext">
-                <h2>Title 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            <div class="text">
+                <h2>Salmon River</h2>
+                <p>"The 425-mile Salmon River is one of the longest free-flowing river in the lower 48 states. The river begins at not much more than a trickle at an elevation of about 8,000 feet in the Sawtooth and Whitecloud Mountains of central Idaho."</p>
             </div>
         </div>
         <div class="item flip">
-            <div class="Snake">
+            <div class="image">
                 <img src="images/Snakeriver.jpg" alt="Image 2">
             </div>
-            <div class="Snaketext">
-                <h2>Title 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            <div class="text">
+                <h2>Snake River</h2>
+                <p>"Originates in Wyoming and arcs across southern Idaho before turning north along the Idaho-Oregon border. The river then enters Washington and flows west to the Columbia River. It is the Columbia's largest tributary, an important source of irrigation water for potatoes, sugar beets, and other crops."</p>
             </div>
         </div>
         <div class="item">
-            <div class="Miss">
+            <div class="image">
                 <img src="images/MissRiver.jpg" alt="Image 3">
             </div>
-            <div class="Misstext">
-                <h2>Title 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer maximus turpis vitae lorem commodo, ac consectetur nisl finibus.</p>
+            <div class="text">
+                <h2>Mississipi River</h2>
+                <p>"The second longest river in North America, flowing 2,350 miles from its source at Lake Itasca through the center of the continental United States to the Gulf of Mexico. The Missouri River, a tributary of the Mississippi River, is about 100 miles longer."</p>
             </div>
         </div>
     </div>
