--- a/personal/index.html
+++ b/personal/index.html
@@ -25,7 +25,7 @@
                 <img src="images/Atlas.jpg" alt="Atlas">
                 <div class="textbox">
                     <h2>Explore Atlas Industries</h2>
-                    <p>Discover the latest innovations in architecture and design.</p>
+                    <p>The leading venture on Weapon technology and Traning</p>
                 </div>
             </div>
             <div class="image-container">
@@ -37,7 +37,7 @@
     <section id="background"></section>
     <section class="msg">
         <h2>Our Mission</h2>
-        <p>SOMETHING SOMETHING INSPO</p>
+        <p>To empower defenders of freedom with precision, reliability, and unwavering dedication, ensuring safety in every shot and confidence in every mission.</p>
     </section>
     <footer>
         <p>Atlas Industries &copy; 2024 - Bryce Hansen</p>
