i hink i did it

--- a/personal/learn.html
+++ b/personal/learn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atlas Industries</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/learn.css">
 </head>
 <body>
     <header>
@@ -21,18 +21,29 @@
     <div id="hero">
     </div>
     <main class="home-grid">
-            <div class="image-container">
-                <img src="images/shootingrange.jpg" alt="Range">
-                <div class="textbox">
-                    <h2>Explore Atlas Industries</h2>
-                    <p>Learn</p>
-                </div>
+        <div class="image-container">
+            <img src="images/shootingrange.jpg" alt="Range">
+            <div class="textbox">
+               <h2>Unlock Your Shooting Potential</h2>
+               <h4>Tips for Improved Accuracy</h4>
+                <p><strong>Stance:</strong> Ensure a stable foundation by standing with your feet shoulder-width apart and knees slightly bent.<br>
+                    <strong>Grip:</strong> Maintain a firm but relaxed grip on the firearm, focusing on consistent pressure with your dominant hand.<br>
+                    <strong>Sight Alignment:</strong> Align your front and rear sights, keeping the target in clear focus. Remember, focus on the front sight.
+                </p>
             </div>
-            <div class="image-container">
-                <a href="#" class="link"></a>
-                <a href="#" class="link"></a>
-                <img src="images/gunparts.jpg" alt="Parts">
-            </div>   
+        </div>
+        <div class="image-container">
+            <img src="images/gunparts.jpg" alt="Parts">
+            <div class="textbox">
+                <h2>Understanding Your Firearm</h2>
+                <h4>Anatomy and Functionality</h4>
+                <p><strong>Barrel:</strong> Learn how the barrel affects accuracy and how barrel length impacts velocity and handling.<br>
+                    <strong>Trigger Mechanism:</strong> Understand the mechanics of the trigger system, including pull weight and reset.<br>
+                    <strong>Action Type:</strong> Explore the differences between semi-automatic, revolver, and bolt-action mechanisms.
+
+                </p>
+            </div>
+        </div>   
     </main>
     <footer>
         <p>Atlas Industries &copy; 2024 - Bryce Hansen</p>
