--- a/personal/shop.html
+++ b/personal/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atlas Industries</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/shop.css">
 </head>
 <body>
     <header>
@@ -15,24 +15,39 @@
             <a href="index.html" target="_blank">Home</a>
             <a href="shop.html" target="_blank">Shop</a>
             <a href="learn.html" target="_blank">Learn</a>
-            <a href="" target="_blank"></a>
+     
         </nav>
     </header>
     <div id="hero">
     </div>
     <main class="home-grid">
-            <div class="image-container">
-                <img src="images/AR-15.jpg" alt="AR-15">
-                <div class="textbox">
-                    <h2>Explore Atlas Industries</h2>
-                    <p>Learn</p>
+        <div class="container">
+            <div class="product">
+                <div class="image">
+                    <img src="images/AR-15.jpg" alt="AR-15">
+                </div>
+                <div class="details">
+                    <div class="title">AR-15</div>
+                    <div class="price">$1000</div>
+                    <div class="description">Semi-automatic rifle.</div>
                 </div>
             </div>
-            <div class="image-container">
-                <a href="#" class="link"></a>
-                <a href="#" class="link"></a>
-                <img src="images/GLock.jpg" alt="GLock">
-            </div>   
+            <div class="product">
+                <div class="image">
+                    <img src="images/GLock.jpg" alt="GLock">
+                </div>
+                <div class="details">
+                    <div class="title">GLock</div>
+                    <div class="price">$800</div>
+                    <div class="description">Semi-automatic handgun.</div>
+                </div>
+            </div>
+        </div>
+        <div class="contact">
+            <h2>Contact Us</h2>
+            <p>Feel free to contact us for any inquiries or support.</p>
+            <!-- Add your contact form or contact information here -->
+        </div>
     </main>
     <footer>
         <p>Atlas Industries &copy; 2024 - Bryce Hansen</p>
