--- a/personal/shop.html
+++ b/personal/shop.html
@@ -26,9 +26,10 @@
                     <img src="images/AR-15.jpg" alt="AR-15">
                 </div>
                 <div class="details">
-                    <div class="title">AR-15</div>
+                    <div class="title">[AR-15]</div>
                     <div class="price">$1000</div>
-                    <div class="description">Semi-automatic rifle.</div>
+                    <div class="description">The AR-15 is a versatile semi-automatic rifle prized for its modular design, accuracy, and reliability.
+                         It's popular among shooting enthusiasts for its ease of customization and maintenance.</div>
                 </div>
             </div>
             <div class="product">
@@ -36,16 +37,33 @@
                     <img src="images/GLock.jpg" alt="GLock">
                 </div>
                 <div class="details">
-                    <div class="title">GLock</div>
+                    <div class="title">[Glock]</div>
                     <div class="price">$800</div>
-                    <div class="description">Semi-automatic handgun.</div>
+                    <div class="description">
+                        The Glock is a renowned semi-automatic pistol recognized for its reliability, simplicity, and widespread adoption by military, law enforcement, and civilians alike. 
+                        It's favored for its durable polymer frame, intuitive design, and consistent performance.</div>
                 </div>
             </div>
         </div>
         <div class="contact">
             <h2>Contact Us</h2>
             <p>Feel free to contact us for any inquiries or support.</p>
-            <!-- Add your contact form or contact information here -->
+            <form action="/my-handling-form-page" method="post">
+                <ul>
+                  <li>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="user_name" />
+                  </li>
+                  <li>
+                    <label for="mail">Email:</label>
+                    <input type="email" id="mail" name="user_email" />
+                  </li>
+                  <li>
+                    <label for="msg">Message:</label>
+                    <textarea id="msg" name="user_message"></textarea>
+                  </li>
+                </ul>
+            </form>              
         </div>
     </main>
     <footer>
